--- a/login.html
+++ b/login.html
@@ -38,9 +38,9 @@
       <form class="form-login" action="admin_index.html">
         <h2 class="form-login-heading">sign in now</h2>
         <div class="login-wrap">
-          <input type="text" class="form-control" placeholder="User ID" autofocus>
+          <input type="text" id='user_email_id' class="form-control" placeholder="User ID" autofocus>
           <br>
-          <input type="password" class="form-control" placeholder="Password">
+          <input type="password" id='user_password' class="form-control" placeholder="Password">
           <label class="checkbox">
             <input type="checkbox" value="remember-me"> Remember me
             <span class="pull-right">
@@ -98,3 +98,4 @@
 </body>
 
 </html>
+
